--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0",
     "sort-by": "^1.2.0"
   },
